--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,18 +1,15 @@
 ---
+name: Rust
+
 # yamllint disable-line rule:truthy
 on: push
 
 env:
   CARGO_TERM_COLOR: always
 
-defaults:
-  runs-on: ubuntu-latest
-
-.commonSteps: &commonSteps
-
-
 jobs:
   test:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -23,6 +20,7 @@ jobs:
       - run: "make test"
 
   clippy:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -33,6 +31,7 @@ jobs:
       - run: "make clippy"
 
   rustfmt:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
